Style 'nav bar right', change object-fit setting to cover on trending, adjust margins of nav, remove margin from landing to fix overflow issue causing white border on the left of featured

--- a/client/src/styles/components/campaignitem.scss
+++ b/client/src/styles/components/campaignitem.scss
@@ -18,7 +18,7 @@
     .campaign-image{
         width: 100%;
         height: 275px;
-        object-fit: fill;
+        object-fit: cover;
     }
     .campaign-summary{
         text-decoration: none;
