--- a/client/src/styles/components/landing.scss
+++ b/client/src/styles/components/landing.scss
@@ -1,7 +1,3 @@
-.landing-main{
-    margin: 6px;
-}
-
 .featured-container{
     width: 100%;
     height: 468px;
